day10 q1- closure(Multiplier)

--- a/HTML/task7.html
+++ b/HTML/task7.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .item{
+            margin: 30px;
+        }
+        .answer{
+            display: none;
+        }
+        .arrow{
+            display: inline-block;
+            transform: rotate(-90deg);
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <div class="item">
+            <div class="question">What is HTML? <span class="arrow">▼</span></div>
+            <div class="answer">HTML is the structure of a webpage.</div>
+        </div>
+
+        <div class="item">
+            <div class="question">What is CSS? <span class="arrow">▼</span></div>
+            <div class="answer">CSS is used for styling.</div>
+        </div>
+
+        <div class="item">
+            <div class="question">What is JS? <span class="arrow">▼</span></div>
+            <div class="answer">JS makes your page interactive.</div>
+        </div>
+    </div>
+
+    <script>
+        
+    </script>
     
 </body>
 </html>
